Enhance Next.js application configuration and functionality. This includes updating the environment variable template for production deployment, adding a database verification script to package.json, and improving Vercel configuration with build commands and CORS headers. Additionally, refactor user challenge handling in the BuilderPage and GroupedChallenges components to utilize merged user challenges, and update the GroupedChallengeTitle component to reflect submission statuses accurately. These changes aim to streamline deployment processes and enhance user experience in the SEA campaign.

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -1,7 +1,7 @@
 # Template for NextJS environment variables.
 
 # For local development, copy this file, rename it to .env.local, and fill in the values.
-# When deploying live, you'll need to store the vars in Vercel/System config.
+# For production deployment, see .env.production.example and DEPLOYMENT.md
 
 # If not set, we provide default values (check `scaffold.config.ts`) so developers can start prototyping out of the box,
 # but we recommend getting your own API Keys for Production Apps.
@@ -9,11 +9,30 @@
 # To access the values stored in this env file you can use: process.env.VARIABLENAME
 # You'll need to prefix the variables names with NEXT_PUBLIC_ if you want to access them on the client side.
 # More info: https://nextjs.org/docs/app/guides/environment-variables
+
+# Database Configuration
+# For local development, use Docker: docker compose up -d
+# For production, use Neon Database (see DEPLOYMENT.md)
+POSTGRES_URL=postgresql://postgres:password@localhost:5432/speedrun_lisk
+
+# API Keys (Get your own for production)
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 
+# API Security
 REVALIDATION_TOKEN=revalidationtoken
 
-# For SIWE
+# Authentication (SIWE - Sign-In with Ethereum)
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somereallysecretsecret
+
+# Firebase Configuration (Required for image uploads)
+# Get from Firebase console > Project settings > Service accounts
+FIREBASE_SERVICE_ACCOUNT_KEY=
+FIREBASE_STORAGE_BUCKET=
+
+# Optional: GitHub Integration
+# GITHUB_TOKEN=
+
+# Optional: Analytics
+# NEXT_PUBLIC_PLAUSIBLE_DOMAIN=localhost:3000
