--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -37,6 +37,7 @@
     "daisyui": "4.12.24",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.42.0",
+    "ethers": "~6.13.2",
     "firebase-admin": "^13.4.0",
     "mime-types": "^3.0.1",
     "next": "~15.4.5",
