--- a/packages/nextjs/vercel.json
+++ b/packages/nextjs/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "yarn install",
-  "buildCommand": "cd ../.. && yarn build",
+  "buildCommand": "yarn build",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "regions": ["iad1"],
