--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=22.18.0"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.5.0"
   }
 }
