--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "devDependencies": {
     "husky": "~9.1.6",
-    "lint-staged": "~13.2.2"
+    "lint-staged": "~13.2.2",
+    "tsx": "^4.20.5"
   },
   "packageManager": "yarn@3.2.3",
   "engines": {
