--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "~5.59.15",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@uniswap/sdk-core": "~5.8.2",
     "@uniswap/v2-sdk": "~4.6.1",
     "@vercel/functions": "^2.0.0",
@@ -39,6 +40,7 @@
     "drizzle-orm": "^0.42.0",
     "ethers": "~6.13.2",
     "firebase-admin": "^13.4.0",
+    "mermaid": "^11.12.0",
     "mime-types": "^3.0.1",
     "next": "~15.4.5",
     "next-auth": "^4.24.11",
@@ -55,8 +57,11 @@
     "react-dropzone": "^14.3.8",
     "react-flags-select": "^2.4.0",
     "react-hot-toast": "~2.4.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.12.2",
     "usehooks-ts": "~3.1.0",
     "viem": "2.21.32",
     "wagmi": "2.12.23",
